--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,8 @@
   <div class="search">
     <input type="text" id="searchInput" placeholder="Search for an agency...">
   </div>
-  
+  <div id="your-button-container"></div>
+
   <div id="results"></div>
   
   <script src="popup.js"></script>
