--- a/Web App/index.html
+++ b/Web App/index.html
@@ -158,16 +158,15 @@
   <script>
     // Firebase Configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDg0ACWUvUb3S6xwEdfjGKgTQmjEsulQMs",
-      authDomain: "recruiter-search-c7515.firebaseapp.com",
-      projectId: "recruiter-search-c7515",
-      databaseURL: "https://recruiter-search-c7515-default-rtdb.firebaseio.com", // Added database URL for Realtime Database
-      storageBucket: "recruiter-search-c7515.appspot.com",
-      messagingSenderId: "342601714550",
-      appId: "1:342601714550:web:699bd13e200851136a4857",
-      measurementId: "G-LPJ6ZNG23T"
-    };
-    
+  apiKey: "AIzaSyDg0ACWUvUb3S6xwEdfjGKgTQmjEsulQMs",
+  authDomain: "recruiter-search-c7515.firebaseapp.com",
+  databaseURL: "https://recruiter-search-c7515-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "recruiter-search-c7515",
+  storageBucket: "recruiter-search-c7515.firebasestorage.app",
+  messagingSenderId: "342601714550",
+  appId: "1:342601714550:web:699bd13e200851136a4857",
+  measurementId: "G-LPJ6ZNG23T"
+};
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
